revaming css + contents

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -39,6 +39,10 @@ ol, ul {
   list-style: none;
 }
 
+ul > li {
+  padding-bottom: 3px;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -49,36 +53,34 @@ Theme Styles
 *******************************************************************************/
 
 body {
+  background-color: #f2f2f2;
   box-sizing: border-box;
   color:#373737;
-  background: #212121;
   font-size: 16px;
-  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: 'Ubuntu Mono', monospace;
   -webkit-font-smoothing: antialiased;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
-  font-weight: 700;
   color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
 
 h1 {
-  font-size: 36px;
-  font-weight: 700;
+  font-size: 24px;
 }
 
 h2 {
-  padding-bottom: 10px;
-  font-size: 32px;
-  background: url('../images/bg_hr.png') repeat-x bottom;
+  font-size: 20px;
 }
 
 h3 {
-  font-size: 24px;
+  border-bottom: 1px solid;
+  font-size: 18px;
+  padding: 30px 0 5px 5px;
+  margin-bottom: 15px;
+  width: 75px;
 }
 
 h4 {
@@ -265,7 +267,7 @@ Full-Width Styles
 .inner {
   position: relative;
   max-width: 640px;
-  padding: 20px 10px;
+  padding: 0px 10px;
   margin: 0 auto;
 }
 
@@ -285,32 +287,22 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
 }
 
 #header_wrap .inner {
-  padding: 50px 10px 30px 10px;
+  padding: 50px 10px 0 10px;
+}
+
+#header_wrap h1 {
+  padding-bottom: 20px;
 }
 
 #project_title {
   margin: 0;
-  color: #fff;
-  font-size: 42px;
-  font-weight: 700;
-  text-shadow: #111 0px 0px 10px;
 }
 
 #project_tagline {
-  color: #fff;
-  font-size: 24px;
-  font-weight: 300;
-  background: none;
-  text-shadow: #111 0px 0px 10px;
+  color: #3f4347;
 }
 
 #downloads {
@@ -352,14 +344,7 @@ Full-Width Styles
   background: url(../images/sprite_download.png) no-repeat top right;
 }
 
-#main_content_wrap {
-  background: #f2f2f2;
-  border-top: 1px solid #111;
-  border-bottom: 1px solid #111;
-}
-
 #main_content {
-  padding-top: 40px;
 }
 
 #footer_wrap {
