possible fix for mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -364,6 +364,10 @@ Small Device Styles
     font-size:14px;
   }
 
+  .container {
+    width: auto;
+  }
+
   #downloads {
     display: none;
   }
