add links and reset button

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -427,6 +427,14 @@ Full-Width Styles
   background: #212121;
 }
 
+.margin_left_l {
+  margin-left: 10px;
+}
+
+.margin_top_xxxl {
+  margin-top: 30px;
+}
+
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
