--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,6 +1,6 @@
 /*******************************************************************************
 Slate Theme for GitHub Pages
-by Jason Costello, @jsncostello
+by Jason Costello, @jsncostello, modified by @kunigami
 *******************************************************************************/
 
 @import url(pygment_trac.css);
@@ -389,35 +389,6 @@ Full-Width Styles
   right: 0;
   height: 70px;
   background: url("../images/icon_download.png") no-repeat 0% 90%;
-}
-
-.zip_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height: 70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
-}
-
-.tar_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height: 70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
-  margin-left: 10px;
-}
-
-.zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
-}
-
-.tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
 }
 
 #main_content {
