add comments, add another post example

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,12 @@
       gtag('config', 'UA-3320447-2');
     </script>
 
+    <!-- Comment SDK -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=367635913321482&autoLogAppEvents=1"></script>
+
+    <!-- Comment configuration -->
+
     <title>{{ page.title }}</title>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
