--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -397,6 +397,10 @@ figcaption {
   font-size: 13px;
 }
 
+.monospace {
+  font-family: Menlo, monospace;
+}
+
 /* ----------------------------------------------------------------------------
  * Small Device Styles
  * ----------------------------------------------------------------------------
