--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,10 @@
             "AMSsymbols.js",
             "noErrors.js",
             "noUndefined.js",
-          ]
+          ],
+          Macros: {
+            hash: "{\\#}",
+          }
         }
       });
     </script>
