--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@kunigami" />
+<meta name="twitter:creator" content="@kunigami" />
+<meta property="og:title" content="{{ page.title }}" />
+<meta property="og:description" content="{{ page.excerpt }}" />
+
 <div id="page">
     <div class="inner">
         <p>
