jekyll/liquid hacks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,16 @@
 layout: default
 ---
 
+{% include blog_vars.html %}
+
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@kunigami" />
 <meta name="twitter:creator" content="@kunigami" />
 <meta property="og:title" content="{{ page.title }}" />
-<meta property="og:description" content="{{ page.excerpt }}" />
+
+{% if page.main_image %}
+<meta name="twitter:image" content="{{resources_path}}/{{page.main_image}}">
+{% endif %}
 
 <div id="page">
     <div class="inner">
