--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,10 @@ layout: default
 <meta name="twitter:creator" content="@kunigami" />
 <meta property="og:title" content="{{ page.title }}" />
 
+{% if page.tweet %}
+<meta name="twitter:description" content="{{page.tweet}}">
+{% endif %}
+
 {% if page.main_image %}
 <meta name="twitter:image" content="{{resources_path}}/{{page.main_image}}">
 {% endif %}
