--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,9 @@
           "AssistiveMML.js",
           "a11y/accessibility-menu.js"
         ],
+        tex2jax: {
+          inlineMath: [['$','$']],
+        },
         jax: ["input/TeX", "output/CommonHTML"],
         TeX: {
           extensions: [
