--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
           "a11y/accessibility-menu.js"
         ],
         tex2jax: {
-          inlineMath: [['$','$'], ['$$','$$']],
+          inlineMath: [['$','$'], ['$$','$$'], ["\\(","\\)"]],
         },
         jax: ["input/TeX", "output/CommonHTML"],
         TeX: {
