new post: deutch jozsa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,8 @@
           ],
           Macros: {
             hash: "{\\#}",
+            ket: ["{\\mid #1 \\rangle}", 1],
+            abs: ["{\\mid #1 \\mid}", 1],
           }
         }
       });
