new post: Quantum Fourier Transform

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
             hash: "{\\#}",
             ket: ["{\\mid #1 \\rangle}", 1],
             abs: ["{\\mid #1 \\mid}", 1],
+            curly: ["\\{ #1 \\}", 1],
           }
         }
       });
