add rss support

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,8 @@
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
 
+    <link rel="alternate" type="application/atom+xml" title="NP-Incompleteness" href="/feed.xml">
+
     <!-- Include the JavaScript for the specific page here -->
     {{ content }}
   </head>
