--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,8 @@ layout: default
         {% endfor %}
 
         <div class="tags">
-            <a href="https://github.com/kunigami/kunigami.github.io/tree/master/{{ page.path }}" target="_blank">Github</a> |
+            <a href="https://github.com/kunigami/kunigami.github.io/tree/master/{{ page.path }}" title="Source code to this post" target="_blank">Source code</a> |
+            <a href="https://www.kuniga.me/feed.xml" title="Subscribe to new posts">RSS feed</a> <a href="https://www.kuniga.me/feed.xml"><img src="{{site.url}}/resources/rss.png" alt="RSS Icon" class="icon" /></a> |
             Tags: {{ tags | array_to_sentence_string: '' }}
         </div>
 
