--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="NP-Incompleteness: {{ page.description }}" />
+    <link rel="icon" href="{{site.baseurl}}/resources/favicon.png" >
     <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" media="screen" href="{{site.baseurl}}/stylesheets/stylesheet.css">
