--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,9 @@
 
     <link rel="alternate" type="application/atom+xml" title="NP-Incompleteness" href="/feed.xml">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+
     <!-- Include the JavaScript for the specific page here -->
     {{ content }}
   </head>
