--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -134,8 +134,8 @@ body {
   background-color: #fff;
   box-sizing: border-box;
   color: #5b5b5b;
-  font-size: 15px;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-family: 'Lora', Verdana, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
