--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -134,7 +134,7 @@ body {
   background-color: #fff;
   box-sizing: border-box;
   color: #5b5b5b;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Lora', Verdana, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
@@ -150,6 +150,7 @@ h5,
 h6 {
   margin: 10px 0;
   color: #5b5b5b;
+  font-family: Verdana;
   letter-spacing: -1px;
   text-decoration: none;
 }
