--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -414,7 +414,7 @@ figcaption {
   font-family: Menlo, monospace;
 }
 
-img.icon {
+#page img.icon {
   border: 0px;
   margin: 0px;
   padding: 0px;
