--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,8 @@
             abs: ["{\\mid #1 \\mid}", 1],
             curly: ["\\{ #1 \\}", 1],
             Mod: ["{\\ (\\mbox{mod} \\ #1)}", 1],
+            norm: ["{\\lvert\\lvert #1 \\rvert\\rvert}", 1],
+            vec: ["\\boldsymbol{#1}", 1],
           }
         }
       });
