replace comments w/ github discussions

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,16 @@ layout: default
             Tags: {{ tags | array_to_sentence_string: '' }}
         </div>
 
-        <div class="fb-comments" data-href="http://kuniga.me/{{ page.url }}" data-numposts="5" data-width="100%"></div>
+        <script src="https://giscus.app/client.js"
+            data-repo="kunigami/kunigami.github.io"
+            data-repo-id="MDEwOlJlcG9zaXRvcnkxODU4Mjk3MQ=="
+            data-category="Announcements"
+            data-category-id="MDE4OkRpc2N1c3Npb25DYXRlZ29yeTMzMDczMjUy"
+            data-mapping="pathname"
+            data-reactions-enabled="1"
+            data-theme="light"
+            crossorigin="anonymous"
+            async>
+        </script>
     </div>
 </div>
