--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,7 @@ layout: default
 
         <script src="https://giscus.app/client.js"
             data-repo="kunigami/kunigami.github.io"
+            data-theme="https://www.kuniga.me/stylesheets/giscus.css"
             data-repo-id="MDEwOlJlcG9zaXRvcnkxODU4Mjk3MQ=="
             data-category="Announcements"
             data-category-id="MDE4OkRpc2N1c3Npb25DYXRlZ29yeTMzMDczMjUy"
