--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -421,6 +421,22 @@ figcaption {
   margin-top: 10px;
 }
 
+ol {
+  counter-reset: item;
+}
+
+ol > li {
+  counter-increment: item;
+}
+
+ol ol > li {
+  display: block;
+}
+
+ol ol > li:before {
+  content: counters(item, ".") ". ";
+}
+
 /* ----------------------------------------------------------------------------
  * Small Device Styles
  * ----------------------------------------------------------------------------
