--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -1,3 +1,4 @@
 <!-- This needs to be define as included html because variables are not inherited by Jekyll pages -->
 {% assign resources_path = site.url | append: "/resources/blog/" | append: page.vanity %}
 {% assign github = "https://github.com/kunigami/kunigami.github.io/blob/master/blog/code/" | append: page.vanity %}
+{% assign blog = site.url | append: "/blog" %}
