--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -443,6 +443,22 @@ ol ol > li:before {
  */
 
 @media only screen and (max-width: 1000px) {
+  body {
+    font-size: 24px;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  h2 {
+    font-size: 26px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
   .inner {
     width: 100%;
     padding: 0 20px;
