--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,76 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3320447-2"></script>
-    <script>
-      // Exclude local development hits from google analytics
-      if (window.location.hostname !== 'localhost') {
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-3320447-2');
-      }
-    </script>
-
-    <!-- Comment SDK -->
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=367635913321482&autoLogAppEvents=1"></script>
-
-    <!-- Comment configuration -->
-
-    <title>{{ page.title }}</title>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="NP-Incompleteness: {{ page.description }}" />
-    <link rel="icon" href="{{site.baseurl}}/resources/favicon.png" >
-    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" media="screen" href="{{site.baseurl}}/stylesheets/stylesheet.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
-    <script type="text/babel" src="{{site.baseurl}}/js/lib/components.js"></script>
-
-    <!-- MathJax -->
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-        extensions: [
-          "MathMenu.js",
-          "MathZoom.js",
-          "AssistiveMML.js",
-          "a11y/accessibility-menu.js"
-        ],
-        tex2jax: {
-          inlineMath: [['$','$'], ['$$','$$'], ["\\(","\\)"]],
-        },
-        jax: ["input/TeX", "output/CommonHTML"],
-        TeX: {
-          extensions: [
-            "AMSmath.js",
-            "AMSsymbols.js",
-            "noErrors.js",
-            "noUndefined.js",
-          ],
-          Macros: {
-            hash: "{\\#}",
-            ket: ["{\\mid #1 \\rangle}", 1],
-            abs: ["{\\mid #1 \\mid}", 1],
-            curly: ["\\{ #1 \\}", 1],
-            Mod: ["{\\ (\\mbox{mod} \\ #1)}", 1],
-            norm: ["{\\lvert\\lvert #1 \\rvert\\rvert}", 1],
-            vec: ["\\boldsymbol{#1}", 1],
-          }
-        }
-      });
-    </script>
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
-    </script>
-
-    <link rel="alternate" type="application/atom+xml" title="NP-Incompleteness" href="/feed.xml">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    {% include common.html %}
 
     <!-- Include the JavaScript for the specific page here -->
     {{ content }}
