--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -340,12 +340,18 @@ form {
  */
 
 #page {
+  box-sizing: border-box;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  min-height: 100vh;
+}
+
+#page nav {
+  width: 100%;
 }
 
 #page img {
@@ -365,6 +371,7 @@ form {
 
 .inner {
   box-sizing: border-box;
+  flex-grow: 1;
   width: 640px;
 }
 
