--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -1,4 +1,4 @@
 <div class="tags">
     <a href="https://github.com/kunigami/kunigami.github.io/tree/master/{{ page.path }}" title="Source code to this post" target="_blank">Source code</a> |
-    <a href="{{ site.url }}/gratitude/" target="_blank">Pay it forward </a> ❤️
+    <a href="{{ site.url }}/gratitude/" target="_blank">Thanks </a> ❤️
 </div>
