--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -2,3 +2,23 @@
 {% assign resources_path = site.url | append: "/resources/blog/" | append: page.vanity %}
 {% assign github = "https://github.com/kunigami/kunigami.github.io/blob/master/blog/code/" | append: page.vanity %}
 {% assign blog = site.url | append: "/blog" %}
+
+
+{% assign posts_so_far = 0 %}
+{% assign posts_last_year = 0 %}
+{% assign current_year = page.date | date: "%Y" %}
+{% assign last_year = current_year | minus: 1 | append: "" %}
+
+{% for post in site.posts %}
+  {% assign post_year = post.date | date: "%Y" %}
+  {% if post_year < current_year %}
+    {% assign posts_so_far = posts_so_far | plus: 1 %}
+  {% endif %}
+
+  {% if post_year == last_year %}
+    {% assign posts_last_year = posts_last_year | plus: 1 %}
+  {% endif %}
+
+{% endfor %}
+
+{% assign blog_age = current_year | minus: 2011 %}
