random additions and fixes

--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -2,6 +2,7 @@
 {% assign resources_path = site.url | append: "/resources/blog/" | append: page.vanity %}
 {% assign github = "https://github.com/kunigami/kunigami.github.io/blob/master/blog/code/" | append: page.vanity %}
 {% assign blog = site.url | append: "/blog" %}
+{% assign docs = site.url | append: "/docs" %}
 
 
 {% assign posts_so_far = 0 %}
