--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -318,6 +318,8 @@ table {
   border-style: hidden;
   margin-bottom: 20px;
   text-align: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 th {
