--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -23,3 +23,4 @@
 {% endfor %}
 
 {% assign blog_age = current_year | minus: 2011 %}
+{% assign book_cover_alt = "book cover for the entry on the left column" %}
