--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -3,7 +3,7 @@
 {% assign github = "https://github.com/kunigami/kunigami.github.io/blob/master/blog/code/" | append: page.vanity %}
 {% assign blog = site.url | append: "/blog" %}
 {% assign docs = site.url | append: "/docs" %}
-
+{% assign resources_path_amuseum = site.url | append: "/resources/amuseum/" | append: page.vanity %}
 
 {% assign posts_so_far = 0 %}
 {% assign posts_last_year = 0 %}
