add collapsable proof

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,5 +38,6 @@ layout: default
             crossorigin="anonymous"
             async>
         </script>
+        <script type="text/javascript" src="{{site.baseurl}}/js/lib/collapsable.js"></script>
     </div>
 </div>
