--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -468,6 +468,14 @@ p > .language-plaintext {
   margin: auto;
 }
 
+proof {
+  display: none;
+}
+
+proof_body {
+  display: none;
+}
+
 /* ----------------------------------------------------------------------------
  * Small Device Styles
  * ----------------------------------------------------------------------------
