new post: conformal maps

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -468,6 +468,11 @@ p > .language-plaintext {
   margin: auto;
 }
 
+theorem {
+  display: block;
+  margin-bottom: 10px;
+}
+
 proof {
   display: none;
 }
