trying new visitor count

--- a/_includes/common.html
+++ b/_includes/common.html
@@ -53,3 +53,4 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+<script data-goatcounter="https://kunigami.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
