new post: Complex Integration

--- a/_includes/common.html
+++ b/_includes/common.html
@@ -37,11 +37,12 @@
         Macros: {
         hash: "{\\#}",
         ket: ["{\\mid #1 \\rangle}", 1],
-        abs: ["{\\mid #1 \\mid}", 1],
+        abs: ["{\\left \\lvert #1 \\right \\rvert}", 1],
         curly: ["\\{ #1 \\}", 1],
         Mod: ["{\\ (\\mbox{mod} \\ #1)}", 1],
         norm: ["{\\lvert\\lvert #1 \\rvert\\rvert}", 1],
         vec: ["\\boldsymbol{#1}", 1],
+        paren: ["{\\left( #1 \\right)}", 1],
         }
     }
     });
