review of book: moorish spain

--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -5,6 +5,7 @@
 {% assign docs = site.url | append: "/docs" %}
 {% assign books = site.url | append: "/books" %}
 {% assign resources_path_amuseum = site.url | append: "/resources/amuseum/" | append: page.vanity %}
+{% assign resources_path_books = site.url | append: "/resources/books/" | append: page.vanity %}
 
 {% assign posts_so_far = 0 %}
 {% assign posts_last_year = 0 %}
