--- a/_includes/common.html
+++ b/_includes/common.html
@@ -50,6 +50,7 @@
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 
+<link rel="me" href="https://www.threads.net/@kuni.gami" />
 <link rel="alternate" type="application/atom+xml" title="NP-Incompleteness" href="/feed.xml">
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
