--- a/_includes/common.html
+++ b/_includes/common.html
@@ -1,8 +1,3 @@
-<!-- Comment SDK -->
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=367635913321482&autoLogAppEvents=1"></script>
-
-<!-- Comment configuration -->
 
 <title>{{ page.title }}</title>
 <meta charset='utf-8' />
@@ -54,5 +49,6 @@
 <link rel="alternate" type="application/atom+xml" title="NP-Incompleteness" href="/feed.xml">
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Crimson Pro&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open Sans&display=swap" rel="stylesheet">
 <script data-goatcounter="https://kunigami.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
