--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -137,7 +137,7 @@ body {
   font-size: 18px;
   font-family: 'Crimson Pro', Verdana, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
-  line-height: normal;
+  line-height: 1.2;
 }
 
 h1,
@@ -184,7 +184,7 @@ h6 {
 }
 
 p {
-  margin: 10px 0 15px 0;
+  margin: 10px 0 20px 0;
 }
 
 footer p {
@@ -498,23 +498,23 @@ proof, nonproof {
 
 @media only screen and (max-width: 1000px) {
   body {
-    font-size: 24px;
+    font-size: 28px;
   }
 
   h1 {
-    font-size: 40px;
+    font-size: 50px;
   }
 
   h2 {
-    font-size: 32px;
+    font-size: 40px;
   }
 
   h3 {
-    font-size: 24px;
+    font-size: 30px;
   }
 
   pre, code {
-    font-size: 24px;
+    font-size: 28px;
   }
 
   #page figcaption {
