--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -324,7 +324,7 @@ table {
 }
 
 th {
-  font-family: "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Crimson Pro', Verdana, Arial, Helvetica, sans-serif;
   padding: 10px;
   background: #dddfe2;
   border: 0;
