--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -405,6 +405,10 @@ form {
   width: max-content;
 }
 
+div.headline {
+  overflow: hidden;
+}
+
 .image_float_left {
   float: left;
   margin-right: 20px;
