--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -6,6 +6,7 @@
 {% assign books = site.url | append: "/books" %}
 {% assign resources_path_amuseum = site.url | append: "/resources/amuseum/" | append: page.vanity %}
 {% assign resources_path_books = site.url | append: "/resources/books/" | append: page.vanity %}
+{% assign resources_path_history = site.url | append: "/resources/docs/history" %}
 {% assign resources = site.url | append: "/resources/" %}
 
 {% assign posts_so_far = 0 %}
