--- a/_layouts/books.html
+++ b/_layouts/books.html
@@ -11,5 +11,7 @@ layout: default
         <h1>{{ page.title }}</h1>
         {{ content }}
 
+        <script type="text/javascript" src="{{site.baseurl}}/js/lib/collapsable.js"></script>
+
     </div>
 </div>
