add new page for nature

--- a/_includes/blog_vars.html
+++ b/_includes/blog_vars.html
@@ -9,6 +9,7 @@
 {% assign resources_path_books = site.url | append: "/resources/books/" | append: page.vanity %}
 {% assign resources_path_history = site.url | append: "/resources/docs/history" %}
 {% assign resources = site.url | append: "/resources/" %}
+{% assign resources_path_nature = site.url | append: "/resources/nature/" | append: page.vanity %}
 
 {% assign posts_so_far = 0 %}
 {% assign posts_last_year = 0 %}
